Fixes header backgrounds on mobile

--- a/_includes/css/screen.sass
+++ b/_includes/css/screen.sass
@@ -76,13 +76,14 @@ body
 		margin: 0
 		font-size: 14px
 		font-weight: normal
-		line-height: 1.25
+		line-height: 2.25
 		text-align: center
 	span
-		display: inline-block
+		display: inline
 		background-color: #eee
-		padding: 6px 12px
+		padding: 0px 12px
 		color: #555
+		box-shadow: 0 0 0 6px #eee
 
 
 #email
